...
    case invalidData
    case invalidRequest
}

// MARK: - Accessibilit yIdentifiers
enum AccessibilityIdentifiers: String {
    case moreInfo = "moreInfoButton"
    case myCareerNavBar = "myCareerNavigationBar"
}
  
// MARK: - Transition Animation Duration
enum TransitionAnimationDuration {
    static let hideDuration = 0.5
    static let showDuration = 0.6
...
